<resources>
    <string name="app_name">YandexMaps</string>
    <string name="image">Image</string>
    <string name="point_text">Point text</string>
    <string name="empty_point_list">You didn\'t add any point yet</string>
    <string name="my_points">My points</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="enter_title">Enter Title</string>
    <string name="location_permission_required">Location permission required!</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="selector_desc">Tap on the icon to select</string>
    <string name="title_is_empty">Title is empty!</string>
</resources>
