<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/selector"
        android:contentDescription="@string/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/transparent"
        android:layout_margin="16dp"
        android:src="@drawable/location_48"
        app:layout_constraintBottom_toTopOf="@id/selectorDescription"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/selectorDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/emptyTitleMsg"
        app:layout_constraintTop_toBottomOf="@id/selector"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:text="@string/selector_desc"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/emptyTitleMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/titleField"
        app:layout_constraintTop_toBottomOf="@id/selectorDescription"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/red"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        android:text="@string/title_is_empty"
        app:layout_constraintStart_toStartOf="parent"/>


    <EditText
        android:id="@+id/titleField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emptyTitleMsg"
        app:layout_constraintBottom_toTopOf="@id/descriptionField"
        android:background="@color/white"
        android:gravity="top"
        android:backgroundTint="@color/purple_title"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:inputType="textLongMessage"
        android:padding="16dp" />

    <EditText
        android:id="@+id/descriptionField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleField"
        app:layout_constraintBottom_toTopOf="@id/save"
        android:background="@color/white"
        android:gravity="top"
        android:backgroundTint="@color/purple_title"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="textLongMessage"
        android:padding="16dp"/>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
